infrastructure/ingress/fined-mentor-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fined-mentor-backend
  labels:
    app: fined-mentor-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fined-mentor-backend
  template:
    metadata:
      labels:
        app: fined-mentor-backend
    spec:
      containers:
      - name: fined-mentor-backend
        image: loicmaxwell/fined-mentor-backend:1.0.0-51f1022
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 36
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fined-mentor-backend
  labels:
    app: fined-mentor-backend
    job: fined-mentor-backend-job
spec:
  selector:
    app: fined-mentor-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
