infrastructure/ingress/fined-mentor-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fined-mentor-frontend
  labels:
    app: fined-mentor-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fined-mentor-frontend
  template:
    metadata:
      labels:
        app: fined-mentor-frontend
    spec:
      containers:
      - name: fined-mentor-frontend
        image: loicmaxwell/fined-mentor-frontend:23
        ports:
        - containerPort: 80
        startupProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 36
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
        resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fined-mentor-frontend
spec:
  type: NodePort
  selector:
    app: fined-mentor-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
